--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -16,8 +16,8 @@
 	"pe-project": "Project",
 	"pe-school": "School",
 	"pe-music": "Music",
-	"pe-landing-page": "Landing Page",
-	"pe-invoice": "Invoice",
+	"pe-landing-page": "Landing Page 2",
+	"pe-invoice": "Step 1",
 	"pe-doctors": "Doctors",
 	"pe-apps": "Apps",
 	"pe-chat": "Chat",
